--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,7 @@
 <div class="header">
 	<h1>GIFhub</h1>
 	<h6>Rockin GIFs like it's 1998</h6>
+	<%= link_to "Home", '/pictures' %>
 </div>
 
 <%= yield %>
