--- a/app/assets/stylesheets/stylesheet.css
+++ b/app/assets/stylesheets/stylesheet.css
@@ -1,13 +1,14 @@
 body {
 	background-image: url("use_your_illusion.png");
 	font-family: sans-serif;
-	font-size: 36px;
+	font-size: 16px;
 	margin-left:auto;
 	margin-right:auto;
 }
 
 .title {
 	background-color: red;
+	text-align: center;
 }
 
 .header {
@@ -16,39 +17,48 @@ body {
 	padding: none;
 	text-align: center;
 }
+
+.header h1 {
+	font-size: 50px;
+	font-style:  }
+
 .add_pic {
 	color: black;
 	padding: 5px;
 	background-color: gray;
+	text-align: center;
 }
 
 .image_frame {
+	margin-left: auto;
+	margin-right: auto;
 	padding: 10px;
-	border-color: white;
-	border: 50px;
-	border-width: 5px;
-	
+	background-color: white;
+	width: 600px;
 }
 
+.picture_box{
+	border-spacing: 100px;
+	border-width: 15px;
+	border-color: blue;
+}
 .comment_box {
-	background-color: gray;
-	width: 600px;
+	background-color: white;
+	width: 530px;
 }
 
 .links_box {
 	background-color: white;
 	width: 200px;
+	margin-bottom: 50px;
 }
 
 ul {
-	list-style-type: none;
-	
+	list-style-type: none;	
 }
 
-a{
-	float: center;
-}
+
 a:link {text-decoration:none;}
 a:visited {text-decoration:none;}
-a:hover {text-decoration:underline;}
+a:hover {text-decoration:underline; background-color: purple; color: white;}
 a:active {text-decoration:underline;}
