--- a/app/views/pictures/edit.html.erb
+++ b/app/views/pictures/edit.html.erb
@@ -13,5 +13,5 @@
   	<%= submit_tag "Update Picture!" %>
   	<%= link_to "or Cancel", pictures_url %>
 <% end %>
-
+<%= link_to image_tag(@picture.url), picture_url(@picture.id) %>
 </div>
